Fix height of canvas preview in export dialog
The canvas preview in the save and share dialog was stretched, prevent
it from doing this.

--- a/styles/elements/export-dialog.styl
+++ b/styles/elements/export-dialog.styl
@@ -2,7 +2,6 @@
 
     .created-image
         width 100%
-        height 100%
 
     input
     textarea
